chore: separate credentials for tfstate, backup, admin

--- a/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
@@ -19,15 +19,28 @@ spec:
           {
             "identities": [
               {
-                "name": "{{ .s3_access_key }}",
+                "name": "{{ .admin_access_key }}",
                 "credentials": [
                   {
-                    "accessKey": "{{ .s3_access_key }}",
-                    "secretKey": "{{ .s3_secret_key }}"
+                    "accessKey": "{{ .admin_access_key }}",
+                    "secretKey": "{{ .admin_secret_key }}"
                   }
                 ],
                 "actions": [
                   "Admin",
+                  "Read",
+                  "Write"
+                ]
+              },
+              {
+                "name": "{{ .terraform_access_key }}",
+                "credentials": [
+                  {
+                    "accessKey": "{{ .terraform_access_key }}",
+                    "secretKey": "{{ .terraform_secret_key }}"
+                  }
+                ],
+                "actions": [
                   "Read",
                   "Write"
                 ],
@@ -42,12 +55,12 @@ spec:
                   }
                 ],
                 "actions": [
-                  "Admin",
                   "Read",
                   "Write"
                 ],
-                "buckets": ["backups", "restic-backups", "app-backups"]
+                "buckets": ["beoftexas-backup"]
               }
+
             ]
           }
   dataFrom:
