--- a/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
@@ -42,6 +42,7 @@ spec:
                 ],
                 "actions": [
                   "Read",
+                  "List",
                   "Write"
                 ],
                 "buckets": ["terraform-state"]
@@ -56,6 +57,7 @@ spec:
                 ],
                 "actions": [
                   "Read",
+                  "List",
                   "Write"
                 ],
                 "buckets": ["beoftexas-backup"]
