--- a/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/externalsecret.yaml
@@ -41,11 +41,10 @@ spec:
                   }
                 ],
                 "actions": [
-                  "Read",
-                  "List",
-                  "Write"
-                ],
-                "buckets": ["terraform-state"]
+                  "Read:terraform-state",
+                  "List:terraform-state",
+                  "Write:terraform-state"
+                ]
               },
               {
                 "name": "{{ .backup_access_key }}",
@@ -56,11 +55,10 @@ spec:
                   }
                 ],
                 "actions": [
-                  "Read",
-                  "List",
-                  "Write"
-                ],
-                "buckets": ["beoftexas-backup"]
+                  "Read:beoftexas-backup",
+                  "List:beoftexas-backup",
+                  "Write:beoftexas-backup"
+                ]
               }
 
             ]
