--- a/kubernetes/apps/default/changedetection/app/helmrelease.yaml
+++ b/kubernetes/apps/default/changedetection/app/helmrelease.yaml
@@ -53,6 +53,9 @@ spec:
           - name: external
             namespace: kube-system
             sectionName: https
+          - name: internal
+            namespace: kube-system
+            sectionName: https
         rules:
           - backendRefs:
               - identifier: app
