--- a/kubernetes/apps/default/consolewiki/app/helmrelease.yaml
+++ b/kubernetes/apps/default/consolewiki/app/helmrelease.yaml
@@ -57,6 +57,9 @@ spec:
           - name: external
             namespace: kube-system
             sectionName: https
+          - name: internal
+            namespace: kube-system
+            sectionName: https
         rules:
           - backendRefs:
               - identifier: app
