--- a/kubernetes/apps/storage/seaweedfs/app/httproute.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/httproute.yaml
@@ -12,6 +12,9 @@ spec:
     - name: external
       namespace: kube-system
       sectionName: https
+    - name: internal
+      namespace: kube-system
+      sectionName: http
   rules:
     - backendRefs:
         - name: seaweedfs-s3
