fix: use loki-obs.kalde.in flat domain for Promtail

--- a/kubernetes/apps/observability/promtail/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/promtail/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
     config:
       # Send logs to Loki on obs cluster
       clients:
-        - url: http://loki.obs.kalde.in/loki/api/v1/push
+        - url: http://loki-obs.kalde.in/loki/api/v1/push
           tenant_id: main-cluster
 
       positions:
