--- a/kubernetes/apps/observability/promtail/ks.yaml
+++ b/kubernetes/apps/observability/promtail/ks.yaml
@@ -2,17 +2,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app promtail
+  name: cluster-apps-promtail
   namespace: flux-system
 spec:
   targetNamespace: observability
-  commonMetadata:
-    labels:
-      app.kubernetes.io/name: *app
-  interval: 10m
   path: ./kubernetes/apps/observability/promtail/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
   wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
