--- a/kubernetes/apps/default/dailytrace/backend/helmrelease.yaml
+++ b/kubernetes/apps/default/dailytrace/backend/helmrelease.yaml
@@ -64,6 +64,9 @@ spec:
           - name: external
             namespace: kube-system
             sectionName: https
+          - name: internal
+            namespace: kube-system
+            sectionName: https
         rules:
           - matches:
               - path:
