fix: seaweedfs to use https

--- a/kubernetes/apps/storage/seaweedfs/app/httproute.yaml
+++ b/kubernetes/apps/storage/seaweedfs/app/httproute.yaml
@@ -14,7 +14,7 @@ spec:
       sectionName: https
     - name: internal
       namespace: kube-system
-      sectionName: http
+      sectionName: https
   rules:
     - backendRefs:
         - name: seaweedfs-s3
