--- a/kubernetes/apps/media/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/radarr/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
               repository: ghcr.io/onedr0p/radarr
               tag: rolling@sha256:4fa8fc7dcf3b38dbed279125330a8b9bd7be6e68e317e685089d3b03774aeeab
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Chicago
               RADARR__INSTANCE_NAME: Radarr
               RADARR__PORT: &port 80
               RADARR__APPLICATION_URL: "https://{{ .Release.Name }}.kalde.in"
