--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
               repository: ghcr.io/onedr0p/sonarr
               tag: rolling@sha256:f82e69b2d290877b89c2bcae9928df7ed74e05ab3cba905ecaeced85f4f1f2c6
             env:
-              TZ: ${TIMEZONE}
+              TZ: America/Chicago
               SONARR__INSTANCE_NAME: Sonarr
               SONARR__PORT: &port 80
               SONARR__APPLICATION_URL: "https://{{ .Release.Name }}.kalde.in"
