--- a/kubernetes/apps/default/immich/app/helmrelease.yaml
+++ b/kubernetes/apps/default/immich/app/helmrelease.yaml
@@ -43,7 +43,7 @@ spec:
               tag: v2.4.1
             env: &env-common
               TZ: ${TZ}
-              IMMICH_SERVER_URL: http://immich-server.default.svc.cluster.local:2283
+              IMMICH_SERVER_URL: http://immich-app.default.svc.cluster.local:2283
               IMMICH_MACHINE_LEARNING_URL: http://immich-machine-learning.default.svc.cluster.local:3003
               PUBLIC_IMMICH_SERVER_URL: https://photos.kalde.in
               REDIS_HOSTNAME: "immich-valkey.default.svc.cluster.local"
@@ -162,12 +162,6 @@ spec:
           machine-learning:
             app:
               - path: /.config
-      tmp:
-        type: emptyDir
-        advancedMounts:
-          immich:
-            app:
-              - path: /tmp
       valkey:
         existingClaim: immich-valkey-v1
         advancedMounts:
