--- a/kubernetes/apps/default/kavita/app/helmrelease.yaml
+++ b/kubernetes/apps/default/kavita/app/helmrelease.yaml
@@ -82,7 +82,7 @@ spec:
         server: 192.168.10.3
         path: /volume1/share2/comics
         globalMounts:
-          - path: /downloads
+          - path: /comics
       books:
         enabled: true
         type: nfs
