--- a/kubernetes/apps/default/akaunting-v3/app/externalsecret.yaml
+++ b/kubernetes/apps/default/akaunting-v3/app/externalsecret.yaml
@@ -16,6 +16,7 @@ spec:
       engineVersion: v2
       data:
         # App
+        DB_NAME: "{{ .db_database }}"
         DB_DATABASE: "{{ .db_database }}"
         DB_PASSWORD: "{{ .db_password }}"
         DB_USERNAME: "{{ .db_user }}"
