--- a/kubernetes/apps/invoiceninja/ks.yaml
+++ b/kubernetes/apps/invoiceninja/ks.yaml
@@ -58,3 +58,25 @@ spec:
     - name: cluster-apps-invoiceninja-db
     - name: cluster-apps-invoiceninja-redis
     - name: cluster-apps-external-secrets-stores
+
+---
+# yaml-language-server: $schema=https://kubernetes-schemas.devbu.io/kustomize.toolkit.fluxcd.io/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-invoiceninja-cronjob
+  namespace: flux-system
+spec:
+  path: ./kubernetes/apps/invoiceninja/cronjob
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
+  dependsOn:
+    - name: cluster-apps-invoiceninja-db
+
