Revert "feat: add Docker Hub auth and mirror images to GHCR"
This reverts commit 2835afbaabae6704645fab7b8e910e921327da1e.

--- a/kubernetes/apps/external-secrets/stores/onepassword/helmrelease.yaml
+++ b/kubernetes/apps/external-secrets/stores/onepassword/helmrelease.yaml
@@ -30,8 +30,7 @@ spec:
           app:
             image:
               # https://github.com/1Password/connect/issues/56
-              # Mirrored from docker.io/1password/connect-api
-              repository: ghcr.io/casmith/mirror/1password-connect-api
+              repository: docker.io/1password/connect-api
               tag: 1.8.1
             env:
               OP_BUS_PORT: "11220"
@@ -71,8 +70,7 @@ spec:
                 memory: 100Mi
           sync:
             image:
-              # Mirrored from docker.io/1password/connect-sync
-              repository: ghcr.io/casmith/mirror/1password-connect-sync
+              repository: docker.io/1password/connect-sync
               tag: 1.8.1
               pullPolicy: IfNotPresent
             env:
