--- a/kubernetes/apps/invoiceninja/redis/helmrelease.yaml
+++ b/kubernetes/apps/invoiceninja/redis/helmrelease.yaml
@@ -31,8 +31,7 @@ spec:
         containers:
           app:
             image:
-              # Mirrored from docker.io/library/redis
-              repository: ghcr.io/casmith/mirror/redis
+              repository: docker.io/library/redis
               tag: "8"
             resources:
               requests:
