--- a/kubernetes/apps/actions-runner-system/beoftexas-runners/app/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/beoftexas-runners/app/helmrelease.yaml
@@ -47,12 +47,35 @@ spec:
             env:
               - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
                 value: "false"
+              - name: DOCKER_HOST
+                value: tcp://localhost:2376
+              - name: DOCKER_TLS_VERIFY
+                value: "1"
+              - name: DOCKER_CERT_PATH
+                value: /certs/client
             volumeMounts:
               - name: work
                 mountPath: /home/runner/_work
+              - name: dind-certs
+                mountPath: /certs/client
+                readOnly: true
+          - name: dind
+            image: docker:dind
+            securityContext:
+              privileged: true
+            env:
+              - name: DOCKER_TLS_CERTDIR
+                value: /certs
+            volumeMounts:
+              - name: work
+                mountPath: /home/runner/_work
+              - name: dind-certs
+                mountPath: /certs/client
 
         # Storage for runner work directory
         volumes:
+          - name: dind-certs
+            emptyDir: {}
           - name: work
             ephemeral:
               volumeClaimTemplate:
