feat(actions-runner): add binfmt DaemonSet for multi-arch builds

--- a/kubernetes/apps/actions-runner-system/beoftexas-runners/ks.yaml
+++ b/kubernetes/apps/actions-runner-system/beoftexas-runners/ks.yaml
@@ -15,6 +15,7 @@ spec:
       name: sops-age
   dependsOn:
     - name: actions-runner-controller
+    - name: binfmt
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2
       kind: HelmRelease
