--- a/kubernetes/apps/default/opencloud/app/helmrelease.yaml
+++ b/kubernetes/apps/default/opencloud/app/helmrelease.yaml
@@ -79,15 +79,11 @@ spec:
     persistence:
       config:
         enabled: true
-        type: nfs
-        server: 192.168.10.3
-        path: /volume1/cluster/opencloud/config
+        existingClaim: opencloud-config
         globalMounts:
           - path: /etc/opencloud
       data:
         enabled: true
-        type: nfs
-        server: 192.168.10.3
-        path: /volume1/cluster/opencloud/data
+        existingClaim: opencloud-data
         globalMounts:
           - path: /var/lib/opencloud
