--- a/kubernetes/apps/default/opencloud/app/kustomization.yaml
+++ b/kubernetes/apps/default/opencloud/app/kustomization.yaml
@@ -4,6 +4,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
+  - ./config-pvc.yaml
+  - ./data-pvc.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./ocirepository.yaml
