fix(collabora): csp headers

--- a/kubernetes/apps/default/collabora/app/helmrelease.yaml
+++ b/kubernetes/apps/default/collabora/app/helmrelease.yaml
@@ -36,7 +36,7 @@ spec:
             env:
               aliasgroup1: https://wopi.kalde.in:443
               DONT_GEN_SSL_CERT: "YES"
-              extra_params: --o:ssl.enable=false --o:ssl.termination=true --o:welcome.enable=false --o:net.frame_ancestors=cloud.kalde.in
+              extra_params: --o:ssl.enable=false --o:ssl.termination=true --o:welcome.enable=false --o:net.frame_ancestors=cloud.kalde.in --o:net.lok_allow.host[0]=cloud.kalde.in
               username:
                 valueFrom:
                   secretKeyRef:
