feat(opencloud): add Collabora Online integration with WOPI
  - Add Collabora CODE deployment (collabora/code:25.04.9.1.1)
  - Add collaboration sidecar to OpenCloud pod for WOPI bridge
  - Configure CSP policy to allow Collabora iframe embedding
  - Add routes for office.kalde.in and wopi.kalde.in

--- a/kubernetes/apps/default/opencloud/app/helmrelease.yaml
+++ b/kubernetes/apps/default/opencloud/app/helmrelease.yaml
@@ -84,6 +84,7 @@ spec:
               COLLABORATION_APP_ICON: https://office.kalde.in/favicon.ico
               COLLABORATION_APP_INSECURE: "true"
               COLLABORATION_CS3API_DATAGATEWAY_INSECURE: "true"
+              COLLABORATION_APP_PROOF_DISABLE: "true"
               OC_URL: https://cloud.kalde.in
 
     service:
